# MSMPI_playground

./: .gitignore  CMakeLists.txt  README.md  msMPITest.cpp  msMPITest.sln  msMPITest.vcxproj  msMPITest.vcxproj.filters  vcpkg.json
msMPITest/x64/Debug/: msMPITest.exe.recipe  msMPITest.ilk  vc143.idb
msMPITest/x64/Debug/msMPITest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  msMPITest.lastbuildstate
